--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-dropzone": "^5.1.0",
     "framer-motion": "^12.1.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-scroll-parallax": "^3.4.5",
     "react-tsparticles": "^2.12.2",
